--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
                                     Documents &amp; Certifications
                                 </a>
 
+                                <a href="products.html" class="group flex items-center px-2 py-2 text-sm leading-5 font-medium rounded-md text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:bg-gray-50 transition ease-in-out duration-150">
+                                    <svg class="mr-3 h-6 w-6 text-gray-400 group-hover:text-gray-500 group-focus:text-gray-500 transition ease-in-out duration-150" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7" />
+                                    </svg>
+                                    Products
+                                </a>
+
                                 <a href="#" class="group flex items-center px-2 py-2 text-sm leading-5 font-medium rounded-md text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:bg-gray-50 transition ease-in-out duration-150">
                                     <svg class="mr-3 h-6 w-6 text-gray-400 group-hover:text-gray-500 group-focus:text-gray-500 transition ease-in-out duration-150" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z" />
@@ -112,12 +119,11 @@
                     </div>
 
                     <div class="px-4 mt-6 sm:px-6 lg:px-8">
-                        <div class="mt-5 grid grid-cols-1 gap-5 lg:grid-cols-2">
-                            <div class="bg-white overflow-hidden shadow rounded-lg relative">
+                        <div class="mt-5 grid grid-cols-1 gap-5 lg:gap-12 lg:grid-cols-2">
+                            <div class="bg-white overflow-hidden shadow-lg rounded-lg border">
                                 <div class="px-4 py-5 sm:p-6">
                                     <div class="flex items-center">
                                         <div class="flex-shrink-0 bg-primary rounded-md p-3">
-                                            <!-- Heroicon name: users -->
                                             <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
                                             </svg>
@@ -131,7 +137,7 @@
                                                     <div class="text-2xl leading-8 font-semibold text-gray-900">
                                                         Drug Monitoring
                                                     </div>
-                                                    <div class="mt-1 md:ml-2 px-2 py-1 flex items-baseline text-xs text-white leading-5 font-semibold bg-green-400 rounded">
+                                                    <div class="mt-1 md:ml-2 px-2 py-1 flex items-baseline text-xs text-white leading-5 font-semibold bg-green-600 rounded">
                                                         On the Way
                                                     </div>
                                                 </dd>
@@ -139,13 +145,16 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="enrolled-services.html" class="absolute w-full h-full top-0 left-0"></a>
+                                <div class="bg-gray-100 text-sm leading-5">
+                                    <a href="enrolled-services.html" class="font-medium text-primary block px-4 py-4 sm:px-6">
+                                        View
+                                    </a>
+                                </div>
                             </div>
-                            <div class="bg-white overflow-hidden shadow rounded-lg relative">
+                            <div class="bg-white overflow-hidden shadow-lg rounded-lg border">
                                 <div class="px-4 py-5 sm:p-6">
                                     <div class="flex items-center">
                                         <div class="flex-shrink-0 bg-primary rounded-md p-3">
-                                            <!-- Heroicon name: mail-open -->
                                             <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z" />
                                             </svg>
@@ -155,7 +164,7 @@
                                                 <dt class="text-sm leading-5 font-medium text-gray-500 truncate">
                                                     Enrolled Services
                                                 </dt>
-                                                <dd class="flex items-baseline">
+                                                <dd class="flex items-baseline flex-col md:flex-row">
                                                     <div class="text-2xl leading-8 font-semibold text-gray-900">
                                                         03
                                                     </div>
@@ -164,13 +173,16 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="enrolled-services.html" class="absolute w-full h-full top-0 left-0"></a>
+                                <div class="bg-gray-100 text-sm leading-5 mt-3px">
+                                    <a href="enrolled-services.html" class="font-medium text-primary block px-4 py-4 sm:px-6">
+                                        View
+                                    </a>
+                                </div>
                             </div>
-                            <div class="bg-white overflow-hidden shadow rounded-lg relative">
+                            <div class="bg-white overflow-hidden shadow-lg rounded-lg border">
                                 <div class="px-4 py-5 sm:p-6">
                                     <div class="flex items-center">
                                         <div class="flex-shrink-0 bg-primary rounded-md p-3">
-                                            <!-- Heroicon name: cursor-click -->
                                             <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                                             </svg>
@@ -189,13 +201,16 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="enrollment.html" class="absolute w-full h-full top-0 left-0"></a>
+                                <div class="bg-gray-100 text-sm leading-5">
+                                    <a href="enrollment.html" class="font-medium text-primary block px-4 py-4 sm:px-6">
+                                        View
+                                    </a>
+                                </div>
                             </div>
-                            <div class="bg-white overflow-hidden shadow rounded-lg relative">
+                            <div class="bg-white overflow-hidden shadow-lg rounded-lg border">
                                 <div class="px-4 py-5 sm:p-6">
                                     <div class="flex items-center">
                                         <div class="flex-shrink-0 bg-primary rounded-md p-3">
-                                            <!-- Heroicon name: cursor-click -->
                                             <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
                                             </svg>
@@ -203,34 +218,28 @@
                                         <div class="ml-5 w-0 flex-1">
                                             <dl>
                                                 <dt class="text-sm leading-5 font-medium text-gray-500 truncate">
-                                                    Your Documents
+                                                    Your
                                                 </dt>
                                                 <dd class="flex items-baseline">
                                                     <div class="text-2xl leading-8 font-semibold text-gray-900">
-                                                        Lorem
+                                                        Documents &amp; Certifications
                                                     </div>
                                                 </dd>
                                             </dl>
                                         </div>
                                     </div>
                                 </div>
-                                <a href="documents.html" class="absolute w-full h-full top-0 left-0"></a>
+                                <div class="bg-gray-100 text-sm leading-5">
+                                    <a href="documents.html" class="font-medium text-primary block px-4 py-4 sm:px-6">
+                                        View
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
 
-                    <!-- <ul class="mt-3 border-t border-gray-200 divide-y divide-gray-100">
-                        <li>
-                            <a href="#" class="flex items-center justify-between px-4 py-4 hover:bg-gray-50 sm:px-6">
-                                <div class="flex items-center truncate space-x-3">
-                                    <div class="w-2.5 h-2.5 flex-shrink-0 rounded-full bg-pink-600"></div>
-                                    <p class="font-medium truncate text-sm leading-6">Lorem ipsum <span class="truncate font-normal text-gray-500">Lorem</span></p>
-                                </div>
-                            </a>
-                        </li>
-                    </ul> -->
                     <div class="py-12 px-4 sm:px-6 lg:px-8">
-                        <h2 class="text-3xl mb-4 leading-6 font-medium text-gray-900">
+                        <h2 class="text-3xl mb-8 pb-4 leading-6 font-medium text-gray-900 border-b">
                             Our Products
                         </h2>
                         <ul class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
