--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                     </div>
                                 </div>
                                 <div class="bg-gray-100 text-sm leading-5">
-                                    <a href="enrollment.html" class="font-medium text-primary block px-4 py-4 sm:px-6">
+                                    <a href="#" class="font-medium text-primary block px-4 py-4 sm:px-6">
                                         View
                                     </a>
                                 </div>
