Added drop down in customer page

--- a/customers-list.html
+++ b/customers-list.html
@@ -109,7 +109,19 @@
                                                 </path>
                                             </svg>
                                         </span>
-                                        <input placeholder="Search" class="appearance-none border border-gray-300 border-b block pl-8 pr-6 py-2 w-full bg-white text-sm placeholder-gray-400 text-gray-700 focus:bg-white focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none" />
+                                        <input placeholder="Search" class="appearance-none rounded-l border border-gray-300 border-b block pl-8 pr-6 py-2 w-full bg-white text-sm placeholder-gray-400 text-gray-700 focus:bg-white focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none" />
+                                    </div>
+                                    <div class="block relative">
+                                        <select class="appearance-none h-full rounded-r border-t border-r border-b block appearance-none w-full bg-white border-gray-300 text-gray-700 py-2 px-4 pr-8 leading-tight focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none">
+                                            <option>Enrollment Status</option>
+                                            <option>Pending</option>
+                                            <option>Completed</option>
+                                        </select>
+                                        <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                                            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                                <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
+                                            </svg>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
