--- a/orders-list.html
+++ b/orders-list.html
@@ -109,7 +109,7 @@
                                                 </path>
                                             </svg>
                                         </span>
-                                        <input placeholder="Search" class="appearance-none border border-r-0 border-gray-300 border-b block pl-8 pr-6 py-2 w-full bg-white text-sm placeholder-gray-400 text-gray-700 focus:bg-white focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none" />
+                                        <input placeholder="Search" class="appearance-none rounded-l border border-r-0 border-gray-300 border-b block pl-8 pr-6 py-2 w-full bg-white text-sm placeholder-gray-400 text-gray-700 focus:bg-white focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none" />
                                     </div>
                                     <div class="block relative">
                                         <span class="h-full absolute inset-y-0 left-0 flex items-center pl-2">
