--- a/customers-list.html
+++ b/customers-list.html
@@ -113,7 +113,7 @@
                                     </div>
                                     <div class="block relative">
                                         <select class="appearance-none h-full rounded-r border-t border-r border-b block appearance-none w-full bg-white border-gray-300 text-gray-700 py-2 px-4 pr-8 leading-tight focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none">
-                                            <option>Enrollment Status</option>
+                                            <option>Enrolment Status</option>
                                             <option>Pending</option>
                                             <option>Completed</option>
                                         </select>
@@ -160,7 +160,7 @@
                                                         </div>
                                                     </th>
                                                     <th class="px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
-                                                        Enrollment Status
+                                                        Enrolment Status
                                                     </th>
                                                     <th class="px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
                                                         Action
@@ -186,7 +186,7 @@
                                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 18.364A9 9 0 005.636 5.636m12.728 12.728A9 9 0 015.636 5.636m12.728 12.728L5.636 5.636" />
                                                             </svg>
                                                         </a>
-                                                        <a href="#" title="Enrollment Info" class="text-teal-400 inline-flex mr-1">
+                                                        <a href="#" title="Enrolment Info" class="text-teal-400 inline-flex mr-1">
                                                             <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
