--- a/enrolled-services.html
+++ b/enrolled-services.html
@@ -61,12 +61,12 @@
                                     <span class="hidden md:block">Dashboard</span>
                                 </a>
     
-                                <a href="enrollment.html" class="group flex justify-center md:justify-start items-center py-2 md:px-2 text-sm leading-5 font-medium rounded-md text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:bg-gray-50 transition ease-in-out duration-150" title="Enroll Now">
+                                <a href="enrolment.html" class="group flex justify-center md:justify-start items-center py-2 md:px-2 text-sm leading-5 font-medium rounded-md text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:bg-gray-50 transition ease-in-out duration-150" title="Enrol Now">
                                     <svg class="md:mr-3 h-6 w-6 text-gray-400 group-hover:text-gray-500 group-focus:text-gray-500 transition ease-in-out duration-150"
                                         fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z" />
                                     </svg>
-                                    <span class="hidden md:block">Enroll Now</span>
+                                    <span class="hidden md:block">Enrol Now</span>
                                 </a>
     
                                 <a href="enrolled-services.html" class="group flex justify-center md:justify-start items-center py-2 md:px-2 text-sm leading-5 font-medium rounded-md text-gray-900 bg-gray-200 focus:outline-none focus:bg-gray-50 transition ease-in-out duration-150" title="Enrolled Services">
@@ -239,7 +239,7 @@
                                             </div>
                                             <div class="flex-initial ml-3 md:ml-6 lg:ml-12">
                                                 <div>
-                                                    <div class="text-gray-700 my-2">Enrollment Status:
+                                                    <div class="text-gray-700 my-2">Enrolment Status:
                                                         <span class="inline-flex rounded-md shadow-sm inline-flex items-center px-3 py-2 text-sm leading-4 font-medium rounded-md text-white bg-red-600">
                                                             Pending
                                                             <svg class="ml-2 -mr-0.5 h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -384,7 +384,7 @@
                                             </div>
                                             <div class="flex-initial ml-3 md:ml-6 lg:ml-12">
                                                 <div>
-                                                    <div class="text-gray-700 my-2">Enrollment Status:
+                                                    <div class="text-gray-700 my-2">Enrolment Status:
                                                         <span class="inline-flex rounded-md shadow-sm inline-flex items-center px-3 py-2 text-sm leading-4 font-medium rounded-md text-white bg-green-600">
                                                             Delivered
                                                             <svg class="ml-2 -mr-0.5 h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
