--- a/enrolment.html
+++ b/enrolment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Enrollment</title>
+    <title>Enrolment</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tailwindcss/ui@latest/dist/tailwind-ui.min.css">
@@ -60,12 +60,12 @@
                                     Dashboard
                                 </a>
 
-                                <a href="enrollment.html" class="group flex items-center px-2 py-2 text-sm leading-5 font-medium rounded-md text-gray-900 bg-gray-200 focus:outline-none focus:bg-gray-50 transition ease-in-out duration-150">
+                                <a href="enrolment.html" class="group flex items-center px-2 py-2 text-sm leading-5 font-medium rounded-md text-gray-900 bg-gray-200 focus:outline-none focus:bg-gray-50 transition ease-in-out duration-150">
                                     <svg class="mr-3 h-6 w-6 text-gray-500 group-hover:text-gray-500 group-focus:text-gray-600 transition ease-in-out duration-150"
                                         fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z" />
                                     </svg>
-                                    Enroll Now
+                                    Enrol Now
                                 </a>
                         
                                 <a href="enrolled-services.html" class="group flex items-center px-2 py-2 text-sm leading-5 font-medium rounded-md text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:bg-gray-50 transition ease-in-out duration-150">
@@ -110,7 +110,7 @@
                 <div class="border-b border-gray-200 px-4 py-4 sm:flex sm:items-center sm:justify-between sm:px-6 lg:px-8">
                     <div class="flex-1 min-w-0">
                         <h1 class="text-4xl font-medium leading-10 text-gray-900 sm:truncate">
-                            Welcome to Enrollment
+                            Welcome to Enrolment
                         </h1>
                     </div>
                 </div>
@@ -497,7 +497,7 @@
                                 </div>
                                 <div class="w-full md:w-1/2 px-3">
                                     <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-enrollment-date">
-                                        Enrollment Date
+                                        Enrolment Date
                                     </label>
                                     <input class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5"
                                         id="grid-enrollment-date" type="text" />
@@ -620,7 +620,7 @@
                             </div>
                             <div class="w-full mb-6">
                                 <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-primary focus:outline-none transition duration-150 ease-in-out uppercase tracking-widest">
-                                    Enroll Now
+                                    Enrol Now
                                 </button>
                             </div>
                         </div>
