--- a/products.html
+++ b/products.html
@@ -129,7 +129,7 @@
                     </div>
 
                     <div class="py-12 px-4 sm:px-6 lg:px-8">
-                        <ul class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4">
+                        <ul class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
                             <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow">
                                 <div class="flex-1 flex flex-col">
                                     <div class="p-8">
