Responsive styling fixes

--- a/customers-list.html
+++ b/customers-list.html
@@ -101,7 +101,7 @@
                     <div class="mt-8 bg-white shadow-lg px-4 py-4 rounded sm:rounded-lg sm:p-6 m-4 sm:m-8 sm:mt-10 border">
                         <div class="flex flex-col">
                             <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-                                <div class="my-2 flex py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+                                <!-- <div class="my-2 flex py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
                                     <div class="block md:w-3/4 lg:w-1/2 relative">
                                         <span class="h-full absolute inset-y-0 left-0 flex items-center pl-2">
                                             <svg viewBox="0 0 24 24" class="h-4 w-4 fill-current text-gray-500">
@@ -123,8 +123,31 @@
                                             </svg>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+                                    <div class="my-2 flex py-2 align-middle inline-block min-w-full">
+                                        <div class="block w-2/4 relative">
+                                            <span class="h-full absolute inset-y-0 left-0 flex items-center pl-2">
+                                                <svg viewBox="0 0 24 24" class="h-4 w-4 fill-current text-gray-500">
+                                                    <path d="M10 4a6 6 0 100 12 6 6 0 000-12zm-8 6a8 8 0 1114.32 4.906l5.387 5.387a1 1 0 01-1.414 1.414l-5.387-5.387A8 8 0 012 10z">
+                                                    </path>
+                                                </svg>
+                                            </span>
+                                            <input placeholder="Search" class="appearance-none rounded-l border border-gray-300 border-b block pl-8 pr-6 py-2 w-full bg-white text-sm placeholder-gray-400 text-gray-700 focus:bg-white focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none" />
+                                        </div>
+                                        <div class="block w-48 relative">
+                                            <select class="appearance-none h-full rounded-r border-t border-r border-b block appearance-none w-full bg-white border-gray-300 text-gray-700 py-2 px-4 pr-8 leading-tight focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none">
+                                                <option>Enrolment Status</option>
+                                                <option>Pending</option>
+                                                <option>Completed</option>
+                                            </select>
+                                            <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                                                <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                                    <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
                                         <table class="min-w-full divide-y divide-gray-200">
                                             <thead>
