--- a/orders-list.html
+++ b/orders-list.html
@@ -100,8 +100,8 @@
                     
                     <div class="mt-8 bg-white shadow-lg px-4 py-4 rounded sm:rounded-lg sm:p-6 m-4 sm:m-8 sm:mt-10 border">
                         <div class="flex flex-col">
-                            <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-                                <div class="my-2 flex py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+                            <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-">
+                                <!-- <div class="my-2 flex py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
                                     <div class="block relative">
                                         <span class="h-full absolute inset-y-0 left-0 flex items-center pl-2">
                                             <svg viewBox="0 0 24 24" class="h-4 w-4 fill-current text-gray-500">
@@ -120,15 +120,6 @@
                                         </span>
                                         <input placeholder="Start Date" class="appearance-none  border border-r-0 border-gray-300 border-b block pl-8 pr-6 py-2 w-full bg-white text-sm placeholder-gray-400 text-gray-700 focus:bg-white focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none" />
                                     </div>
-                                    <!-- <div class="block relative">
-                                        <span class="h-full absolute inset-y-0 left-0 flex items-center pl-2">
-                                            <svg class="h-4 w-4 text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                                stroke="currentColor">
-                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
-                                            </svg>
-                                        </span>
-                                        <input placeholder="End Date" class="appearance-none rounded-r border border-gray-300 border-b block pl-8 pr-6 py-2 w-full bg-white text-sm placeholder-gray-400 text-gray-700 focus:bg-white focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none" />
-                                    </div> -->
                                     <div class="block relative">
                                         <span class="h-full absolute inset-y-0 left-0 flex items-center pl-2">
                                             <svg class="h-4 w-4 text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -151,8 +142,51 @@
                                             </svg>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+                                    <div class="my-2 flex py-2 align-middle inline-block min-w-full">
+                                        <div class="block relative">
+                                            <span class="h-full absolute inset-y-0 left-0 flex items-center pl-2">
+                                                <svg viewBox="0 0 24 24" class="h-4 w-4 fill-current text-gray-500">
+                                                    <path d="M10 4a6 6 0 100 12 6 6 0 000-12zm-8 6a8 8 0 1114.32 4.906l5.387 5.387a1 1 0 01-1.414 1.414l-5.387-5.387A8 8 0 012 10z">
+                                                    </path>
+                                                </svg>
+                                            </span>
+                                            <input placeholder="Search" class="appearance-none rounded-l border border-r-0 border-gray-300 border-b block pl-8 pr-6 py-2 w-full bg-white text-sm placeholder-gray-400 text-gray-700 focus:bg-white focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none" />
+                                        </div>
+                                        <div class="block relative">
+                                            <span class="h-full absolute inset-y-0 left-0 flex items-center pl-2">
+                                                <svg class="h-4 w-4 text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                                    stroke="currentColor">
+                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                                                </svg>
+                                            </span>
+                                            <input placeholder="Start Date" class="appearance-none  border border-r-0 border-gray-300 border-b block pl-8 pr-6 py-2 w-full bg-white text-sm placeholder-gray-400 text-gray-700 focus:bg-white focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none" />
+                                        </div>
+                                        <div class="block relative">
+                                            <span class="h-full absolute inset-y-0 left-0 flex items-center pl-2">
+                                                <svg class="h-4 w-4 text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                                    stroke="currentColor">
+                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                                                </svg>
+                                            </span>
+                                            <input placeholder="End Date" class="appearance-none rounded- border border-gray-300 border-b block pl-8 pr-6 py-2 w-full bg-white text-sm placeholder-gray-400 text-gray-700 focus:bg-white focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none" />
+                                        </div>
+                                        <div class="block relative">
+                                            <select class="appearance-none h-full rounded-r border-t border-r border-b block appearance-none w-full bg-white border-gray-300 text-gray-700 py-2 px-4 pr-8 leading-tight focus:placeholder-gray-600 focus:text-gray-700 focus:outline-none">
+                                                <option>All</option>
+                                                <option>In Progress</option>
+                                                <option>Pending</option>
+                                                <option>Transit</option>
+                                                <option>Completed</option>
+                                            </select>
+                                            <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                                                <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                                    <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
                                         <table class="min-w-full divide-y divide-gray-200">
                                             <thead>
@@ -327,7 +361,7 @@
                             </div>
                         </div>
                     
-                        <div class="flex items-center justify-between mt-3">
+                        <div class="flex items-center justify-between mt-4 mx-2">
                             <div class="flex-1 flex justify-between sm:hidden">
                                 <a href="#" class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 active:bg-gray-100 active:text-gray-700 transition ease-in-out duration-150">
                                     Previous
